[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_playground"
version = "0.0.2"
authors = [
  { name="Python Playground", email="florian2richter@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
]
[project.urls]
"Homepage" = "https://github.com/Florian2Richter/python_playground"
"Bug Tracker" = "https://github.com/Florian2Richter/python_playground"